refresh alignment fix

--- a/lab/login/style.css
+++ b/lab/login/style.css
@@ -67,6 +67,8 @@ input[type="checkbox"] {
   font-size: 16px;
   float: right;
   flex-shrink: 0;
+  margin-left: auto;
+  margin-right: 0;
 }
 
 #refresh-sign:hover {
